- InternalErrorException became a RuntimeException and is now thrown in all the try-catch that were handling exceptions that will never occur - corrected some issues detected by SonarQube